grammar fix kle

--- a/src/markdown/mas/verzameling_verklarende_variabelen.Rmd
+++ b/src/markdown/mas/verzameling_verklarende_variabelen.Rmd
@@ -826,7 +826,7 @@ telpunten_2018_2022_kle %>%
 
 ### Opmerkingen
 
-Gebruiken we oppervlakte aandeel kleine landschapselementen of splitsen we op via de classes cf. hoofdteelten.
+Gebruiken we oppervlakte aandeel kleine landschapselementen of splitsen we op via de klasses cf. hoofdteelten?
 
 ## Oppervlakte-aandeel biolandbouw
 
